--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,10 +1,14 @@
 .logo {
-  font-family: var(--secondary-font);
+  font-family: $secondary-font;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.2;
   text-decoration: none;
   color: #000000;
+
+  &__web {
+    color: $accent-color;
+  }
 }
 
 .page-nav__logo {
@@ -13,8 +17,4 @@
 
 .animate__rubberBand {
   animation-duration: 600ms;
-}
-
-.logo__web {
-  color: var(--accent-color);
 }
