--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -11,14 +11,14 @@
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  color: $title-text-color;
 }
 
 .modal-form__field {
   position: relative;
   display: block;
   margin-top: 4px;
-  color: var(--title-text-color);
+  color: $title-text-color;
 }
 
 .modal-form__icon {
@@ -28,6 +28,10 @@
   transform: translateY(-50%);
   fill: currentColor;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .modal-form__input:focus + & {
+    color: $accent-color;
+  }
 }
 
 .modal-form__label {
@@ -35,7 +39,7 @@
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 
 .modal-form__input {
@@ -45,15 +49,11 @@
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-form__input:focus + .form-icon {
-  color: var(--accent-color);
-}
-
-.modal-form__input:focus {
-  border: 1px solid var(--accent-color);
-  outline: none;
+  &:focus {
+    border: 1px solid $accent-color;
+    outline: none;
+  }
 }
 
 .modal-form--label {
@@ -65,13 +65,13 @@
   padding: 12px 16px;
   margin-top: 4px;
   resize: none;
-}
 
-.modal-form--textarea::placeholder {
-  font-size: 14px;
-  line-height: 1.4;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
+  &::placeholder {
+    font-size: 14px;
+    line-height: 1.4;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 
 .form-checkbox-policy {
@@ -81,38 +81,42 @@
   line-height: 1.7;
   letter-spacing: 0.03em;
   text-align: center;
-}
 
-.form-checkbox-policy::before {
-  display: inline-block;
-  vertical-align: middle;
-  width: 16px;
-  height: 15px;
-  margin-right: 7px;
-  content: '';
-  border: 2px solid #212121;
-  border-radius: 2px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &::before {
+    display: inline-block;
+    vertical-align: middle;
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+    content: '';
+    border: 2px solid #212121;
+    border-radius: 2px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.form-checkbox:checked + .form-checkbox-policy::before {
-  background-image: url('../img/icon-checked.svg');
-  background-position: center;
-  background-size: cover;
-  background-color: var(--accent-color);
-  border: none;
-}
+    .form-checkbox:checked + & {
+      background-image: url('../img/icon-checked.svg');
+      background-position: center;
+      background-size: cover;
+      background-color: $accent-color;
+      border: none;
+    }
+    .form-checkbox:focus + & {
+      border-color: $accent-color;
+    }
 
-.form-checkbox:focus + .form-checkbox-policy::before {
-  border-color: var(--accent-color);
-}
-
-.form-checkbox:focus:checked + .form-checkbox-policy::before {
-  outline: auto var(--title-text-color);
+    .form-checkbox:focus:checked + & {
+      outline: auto $title-text-color;
+    }
+  }
 }
 
 .form-checkbox-policy__link {
-  color: var(--accent-color);
+  color: $accent-color;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
 }
 
 .form-button {
@@ -122,20 +126,16 @@
   padding: 10px 55px 10px 55px;
   margin: 0 auto;
 
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-  cursor: pointer;
-  border-radius: 4px;
-  background-color: var(--accent-color);
+  @extend %button;
+
+  color: $primary-white-color;
+  background-color: $accent-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.form-button:hover,
-.form-button:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
