--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,17 +1,15 @@
 .regular-customers__title {
   margin-bottom: 50px;
-
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.2;
+  @include title-font($fs: 36px, $lh: 1.2);
   text-align: center;
 
-  color: var(--title-text-color);
+  color: $title-text-color;
 }
 
 .customers {
   display: flex;
 }
+
 .customers__item:not(:last-child) {
   margin-right: 30px;
 }
@@ -25,19 +23,19 @@
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  color: var(--icon-color);
+  color: $icon-color;
 
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.customers__link:hover,
-.customers__link:focus {
-  outline: none;
-  border: 1px solid #2196f3;
-  color: var(--accent-color);
-  animation: swing;
-  animation-duration: 500ms;
+  &:hover,
+  &:focus {
+    outline: none;
+    border: 1px solid #2196f3;
+    color: $accent-color;
+    animation: swing;
+    animation-duration: 500ms;
+  }
 }
 
 .customers__icon {
