--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -32,30 +32,30 @@
   line-height: 1.1;
   text-decoration: none;
   letter-spacing: 0.02em;
-  color: var(--title-text-color);
+  color: $title-text-color;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.page-nav__link:hover,
-.page-nav__link:focus {
-  outline: none;
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    outline: none;
+    color: $accent-color;
+  }
 }
 
 .page-nav--current {
-  color: var(--accent-color);
+  color: $accent-color;
   padding-bottom: 0px;
-}
 
-.page-nav--current::after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 4px;
-  margin-top: 28px;
-  border-radius: 4px;
-  background: #2196f3;
+  &::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    margin-top: 28px;
+    border-radius: 4px;
+    background: #2196f3;
+  }
 }
 
 .contacts {
@@ -78,17 +78,17 @@
   text-decoration: none;
   letter-spacing: 0.02em;
 
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.contacts__link:hover,
-.contacts__link:focus {
-  outline: none;
-  color: var(--accent-color);
-  animation: heartBeat;
-  animation-duration: 600ms;
+  &:hover,
+  &:focus {
+    outline: none;
+    color: $accent-color;
+    animation: heartBeat;
+    animation-duration: 600ms;
+  }
 }
 
 .contacts__icon {
