--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -21,35 +21,25 @@
 
 .hero-section__title {
   margin-bottom: 30px;
-
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.4;
+  @include title-font($fw: 900, $fs: 44px, $lh: 1.4);
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
 }
 
 .hero-section__button {
   min-width: 200px;
   padding: 10px 32px;
 
-  font-family: inherit;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  border-style: none;
-  border-radius: 4px;
+  @extend %button;
 
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  color: $primary-white-color;
+  background-color: $accent-color;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.hero-section__button:hover,
-.hero-section__button:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
