--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,16 +1,13 @@
 .team {
-  background-color: var(--secondary-color);
-}
+  background-color: $secondary-color;
 
-.team__title {
-  margin-bottom: 50px;
+  &__title {
+    margin-bottom: 50px;
+    @include title-font($fs: 36px, $lh: 1.2);
+    text-align: center;
 
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.2;
-  text-align: center;
-
-  color: var(--title-text-color);
+    color: $title-text-color;
+  }
 }
 
 .team-card {
@@ -18,40 +15,40 @@
   flex-wrap: wrap;
   margin-top: -30px;
   margin-left: -30px;
-}
 
-.team-card__item {
-  margin-top: 30px;
-  margin-left: 30px;
+  &__item {
+    margin-top: 30px;
+    margin-left: 30px;
 
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
 
-.team-card__desc {
-  width: 270px;
-  padding: 30px 0;
-  background-color: #fff;
-  border-radius: 0px 0px 4px 4px;
-}
+  &__desc {
+    width: 270px;
+    padding: 30px 0;
+    background-color: #fff;
+    border-radius: 0px 0px 4px 4px;
+  }
 
-.team-card__name {
-  margin-bottom: 10px;
+  &__name {
+    margin-bottom: 10px;
 
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-  color: var(--title-text-color);
-  text-align: center;
-}
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+    color: $title-text-color;
+    text-align: center;
+  }
 
-.team-card__text {
-  margin-bottom: 16px;
+  &__text {
+    margin-bottom: 16px;
 
-  text-align: center;
-  font-size: 16px;
-  line-height: 1.2;
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.2;
+  }
 }
 
 .social-network {
@@ -65,19 +62,19 @@
   justify-content: center;
   width: 44px;
   height: 44px;
-  color: var(--icon-color);
+  color: $icon-color;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.social-network__link:hover,
-.social-network__link:focus {
-  border-radius: 50%;
-  outline: none;
-  color: var(--secondary-color);
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    border-radius: 50%;
+    outline: none;
+    color: $secondary-color;
+    background-color: $accent-color;
+  }
 }
 
 .social-network__icon {
