--- a/sass/layout/_occupation.scss
+++ b/sass/layout/_occupation.scss
@@ -1,37 +1,37 @@
 .occupation {
   padding-bottom: 94px;
+}
 
-  &__title {
-    margin-bottom: 50px;
-    @include title-font($fs: 36px, $lh: 1.2);
-    text-align: center;
+.occupation__title {
+  margin-bottom: 50px;
+  @include title-font($fs: 36px, $lh: 1.2);
+  text-align: center;
 
-    color: $title-text-color;
-  }
+  color: $title-text-color;
 }
 
 .occupation-list {
   display: flex;
   justify-content: space-between;
+}
 
-  &__thumb {
-    position: relative;
-  }
+.occupation-list__thumb {
+  position: relative;
+}
 
-  &__text {
-    position: absolute;
-    bottom: 0;
-    width: 370px;
-    padding: 27px 82px;
+.occupation-list__text {
+  position: absolute;
+  bottom: 0;
+  width: 370px;
+  padding: 27px 82px;
 
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $primary-white-color;
-    background: rgba(47, 48, 58, 0.8);
-    overflow: auto;
-  }
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: $primary-white-color;
+  background: rgba(47, 48, 58, 0.8);
+  overflow: auto;
 }
